Changed and added more cookiecutter variables

--- a/{{ cookiecutter.project_slug }}/index.html
+++ b/{{ cookiecutter.project_slug }}/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{{ cookiecutter.presentation_name }}</title>
+        <title>{{ cookiecutter.presentation_title }}</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="slides.css" />
 {%- if cookiecutter.mermaid == 'true' -%}
