Secure https link to remarkjs

--- a/{{ cookiecutter.project_repo }}/index.html
+++ b/{{ cookiecutter.project_repo }}/index.html
@@ -9,7 +9,7 @@
 {%- endif -%}
     </head>
     <body>
-        <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js"></script>
+        <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 {%- if cookiecutter.mermaid == 'true' -%}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/6.0.0/mermaid.min.js"></script>
 {%- endif -%}
